--- a/data/project_order.toml
+++ b/data/project_order.toml
@@ -1,6 +1,6 @@
 content = [
-    "/projects/i-like-that",
-    "/projects/pynk",
+    "/projects/davis-dance-revolution",
+    "/projects/diversity-poc",
     "/projects/dirty-computer",
     "/projects/yoga",
     "/projects/electric-lady",
