--- a/data/project_order.toml
+++ b/data/project_order.toml
@@ -1,11 +1,12 @@
 content = [
     "/projects/davis-dance-revolution",
     "/projects/diversity-poc",
-    "/projects/dirty-computer",
-    "/projects/yoga",
-    "/projects/electric-lady",
-    "/projects/tightrope",
-    "/projects/archandroid",
-    "/projects/metropolis", 
+    "/projects/calvin-handy",
+    "/projects/pantry-reopening",
+    "/projects/housing-day",
+    "/projects/equity-summit",
+    "/projects/unitrans",
+    "/projects/pantry-benefit",
+    "/projects/vacaville-bg", 
 ]
 
