--- a/config.toml
+++ b/config.toml
@@ -2,4 +2,4 @@ baseURL = ""
 languageCode = "en-us"
 title = "Jillian Nguyen"
 disableKinds = ["RSS", "taxonomy", "taxonomyTerm"]
-publishDir= "../jillian-nguyen.github.io"
+publishDir= "../jayllian.github.io"
